# pg-store

./: .stylish-haskell.yaml  .travis.yml  LICENSE  pg-store.cabal  postgresql-data.cabal  stack.yaml
old-src/Database/PostgreSQL/Store/: Enum.hs  Errand.hs  Result.hs
old-src/Database/PostgreSQL/Store/Table/: Class.hs
playground/: Approach.hs
src/: Test.hs
src/Database/PostgreSQL/: Data.hs  Store.hs
src/Database/PostgreSQL/Data/: SQL.hs  TH.hs  Types.hs
src/Database/PostgreSQL/Store/: Column.hs  ColumnEntity.hs  Columns.hs  Entity.hs  Enum.hs  Errand.hs  GenericEntity.hs  Generics.hs  Internal.hs  Monad.hs  OIDs.hs  Parameters.hs  Query.hs  Result.hs  ResultParser.hs  RowParser.hs  SQL.hs  SafeGeneric.hs  TH.hs  Table.hs  Tuple.hs  Types.hs  Utilities.hs  Value.hs
src/Database/PostgreSQL/Store/Query/: Builder.hs  Builder2.hs  Entity.hs  Parameters.hs  TH.hs  TH2.hs
src/Database/PostgreSQL/Store/Result/: Entity.hs  Parser.hs
src/Database/PostgreSQL/Store/TH/: Query.hs  Table.hs
src/Database/PostgreSQL/Store/Table/: Class.hs  TH.hs
tests/: Entities.hs  Main.hs
tests/Database/PostgreSQL/Store/: ColumnsSpec.hs  QuerySpec.hs  TableSpec.hs
tests/Test/Database/PostgreSQL/: Store.hs
tests/Test/Database/PostgreSQL/Store/: Columns.hs  Query.hs  Table.hs
