name:                pg-store
version:             0.0.0
license:             BSD3
license-file:        LICENSE
author:              Ole Krüger
maintainer:          ole@vprsm.de
copyright:           Copyright (c) Ole Krüger 2015
build-type:          Simple
cabal-version:       >= 1.10

library
  ghc-options:      -Wall -fprof-auto -fno-warn-unused-do-bind -fno-warn-tabs
                    -fno-warn-name-shadowing
  default-language: Haskell2010
  build-depends:    base, template-haskell, bytestring, text, postgresql-libpq, transformers,
                    attoparsec
  hs-source-dirs:   src
  exposed-modules:  Test,
                    Database.PostgreSQL.Store,
                    Database.PostgreSQL.Store.Internal,
                    Database.PostgreSQL.Store.TH.Table,
                    Database.PostgreSQL.Store.TH.Query
