name:                pg-store
version:             0.0.0
category:            Database
synopsis:            Dead simple storage interface to PostgreSQL
homepage:            https://github.com/vapourismo/pg-store
license:             BSD3
license-file:        LICENSE
author:              Ole Krüger <ole@vprsm.de>
maintainer:          Ole Krüger <ole@vprsm.de>
copyright:           (c) Ole Krüger 2015
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type:     git
  location: https://github.com/vapourismo/pg-store.git

library
  ghc-options:      -Wall -fprof-auto -fno-warn-unused-do-bind -fno-warn-tabs
                    -fno-warn-name-shadowing
  default-language: Haskell2010
  build-depends:    base, template-haskell, bytestring, text, postgresql-libpq, transformers,
                    attoparsec
  hs-source-dirs:   src
  exposed-modules:  Database.PostgreSQL.Store,
                    Database.PostgreSQL.Store.Table,
                    Database.PostgreSQL.Store.Columns,
                    Database.PostgreSQL.Store.Query,
                    Database.PostgreSQL.Store.Result,
                    Database.PostgreSQL.Store.Errand

test-suite tests
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall -fprof-auto -fno-warn-unused-do-bind -fno-warn-tabs
                    -fno-warn-name-shadowing
  default-language: Haskell2010
  build-depends:    base, pg-store, hspec, QuickCheck, bytestring, text
  hs-source-dirs:   tests
  main-is:          Main.hs
