name:                pg-store
version:             0.1.1
category:            Database
synopsis:            Simple storage interface to PostgreSQL
description:         Simple storage interface to PostgreSQL
homepage:            https://github.com/vapourismo/pg-store
license:             BSD3
license-file:        LICENSE
author:              Ole Krüger <ole@vprsm.de>
maintainer:          Ole Krüger <ole@vprsm.de>
copyright:           (c) Ole Krüger 2015
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type:     git
  location: https://github.com/vapourismo/pg-store.git

library
  ghc-options:      -Wall -fno-warn-unused-do-bind -fno-warn-tabs -fno-warn-name-shadowing
  default-language: Haskell2010
  build-depends:    base >= 4.9 && < 5,
                    template-haskell >= 2.11 && < 3,
                    bytestring, blaze-builder, text, postgresql-libpq, attoparsec, mtl, time
  hs-source-dirs:   src
  exposed-modules:  Database.PostgreSQL.Store.Table
                    Database.PostgreSQL.Store.Columns
  other-modules:    Database.PostgreSQL.Store.Table.Class
                    Database.PostgreSQL.Store.OIDs

-- test-suite tests
--   type:             exitcode-stdio-1.0
--   ghc-options:      -Wall -fno-warn-unused-do-bind -fno-warn-tabs -fno-warn-name-shadowing
--   default-language: Haskell2010
--   build-depends:    base, pg-store, hspec, QuickCheck, bytestring, text, postgresql-libpq, mtl
--   hs-source-dirs:   tests
--   other-modules:    Test.Database.PostgreSQL.Store.Query
--                     Test.Database.PostgreSQL.Store.Columns
--                     Test.Database.PostgreSQL.Store.Table
--                     Test.Database.PostgreSQL.Store
--   main-is:          Main.hs

benchmark play-approach
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall -fno-warn-unused-do-bind -fno-warn-tabs -with-rtsopts -p
  default-language: Haskell2010
  build-depends:    base, pg-store, postgresql-libpq, mtl, bytestring
  hs-source-dirs:   playground
  main-is:          Approach.hs
