name:                postgresql-data
version:             0.0.0
license:             BSD3
license-file:        LICENSE
author:              Ole Krüger
maintainer:          ole@vprsm.de
copyright:           Copyright (c) Ole Krüger 2015
build-type:          Simple
cabal-version:       >= 1.10

library
  ghc-options:      -Wall -fprof-auto -fno-warn-unused-do-bind -fno-warn-tabs
                    -fno-warn-name-shadowing
  default-language: Haskell2010
  build-depends:    base, template-haskell
  hs-source-dirs:   src
  exposed-modules:  Database.PostgreSQL.Data
  other-modules:    Database.PostgreSQL.Data.TH,
                    Database.PostgreSQL.Data.Types
